--- a/coho/default.css
+++ b/coho/default.css
@@ -609,4 +609,24 @@
 		float:left;
 		margin-right: 24px;
 	}
-	
+
+
+.attend{
+    width: 100%;
+    height: 10%;
+    background-color: #fff;
+
+
+}
+.attend #neg{
+    height: 100%;
+    width: 50%;
+    background-color: red;
+
+}
+
+.attend #pos{
+    height: 100%;
+    width: 50%;
+    background-color: green;
+}
