--- a/yep.css
+++ b/yep.css
@@ -5,55 +5,367 @@
     border-color: #9a9a9a;
     border-width: 1px;
     border-style:solid;
-    height: 100%;
-    width: 10% 
+    height: 80px;
+    width: 80px;  
     
 }
 
+h1{
+    font-weight: 800;
+    font-family: 'Open Sans', sans-serif;
+}
 
+h3{
+    font-weight: 500;
+}
 
 .buttonred {
-    background-color: #ff583c;
+    background-color: red;
+    align-content: center;
     float: right;
     padding: 0;
     border-color: #9a9a9a;
     border-width: 1px;
     border-style:solid;
-    height: 100%;
-    width: 10% 
+    height: 80px;
+    width: 80px; 
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
     
 }
 
 .buttongreen {
-    background-color: #45ff3c;
+    background-color: green;
     float: right;
     padding: 0;
     border-color: #9a9a9a;
     border-width: 1px;
     border-style:solid;
-    height: 100%;
-    width: 10% 
-    
+    height: 80px;
+    width: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 
 .words{
     font-family: 'Source Sans Pro', sans-serif;
     float: left;
+    padding: 8px 0em;
+    margin-left: 10px;
     font-size: 30pt;
     width: 50%
     
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: #f1f1f1;
+}
+
+li{
+    width: 100%;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #3f3f3f;
+    float: left;
+    background-color: rgba(215,215,215,0.5);
+}
+
+
+a{
+    text-decoration: none;
+}
+
+li p {
+    display: block;
+    color: #000;
+    text-decoration: none;
+    font-size: 6rem;
+    font-weight: 800;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0px;
+}
+
+body {
+  background: linear-gradient(#dab844, white);
+  padding: 0px;
+}
+
+/* Change the link color on hover */
+li p:hover {
+    margin: 0px;
+    font-weight: 800;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #c6c6c6;
+    color: white;
+}
+
+.texter{
+    float: right;
+    padding: 0;
+    border-color: #9a9a9a;
+    border-width: 1px;
+    border-style:solid;
+    height: 80px;
+    width: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
 .container-odd{
     width: 100%;
-    height: 6%;
     margin: 0px;
+}
+
+#chart-div{
+    width = 100%;
+}
+
+#columnchart_values0{
+    width = 100%;
+    clear: both;
+    float: left;
+}
+
+
+#columnchart_values1{
+    width = 100%;
+    clear: both;
+    float: left;
+}
+
+#columnchart_values2{
+    width = 100%;
+    clear: both;
+    float: left;
+}
+
+#columnchart_values3{
+    width = 100%;
+    clear: both;
+    float: left;
+}
+
+#columnchart_values10{
+    width = 100%;
+    clear: both;
+    float: left;
+}
+
+#columnchart_values21{
+    width = 100%;
+    clear: both;
+    float: left;
+}
+
+#columnchart_values20{
+    width = 100%;
+    clear: both;
+    float: left;
+}
+
+.container-new{
+    width: 100%;
+    margin: 0px;
+    font-family: 'Source Sans Pro', sans-serif;
+    float: left;
+    font-size: 30pt;
+    background-color: #bfbfbf;
+    overflow: visible;
 }
 
 .container-even{
     width: 100%;
-    height: 6%;
-    background-color: #ececec;
+    /*background-color: #ececec;**/
     margin: 0px;
 }
 
+.panel #head{
+    width: 100%;
+    opacity: 0;
+}
+ 
+/*******************************************************/
+/*/                                                   /*/
+/*/                      dater                        /*/
+/*/                                                   /*/
+/*******************************************************/
+
+#dater{
+    width: 100%;
+    height: 100px;
+   /* margin-left: 15px;*/
+}
+
+#datePicker{
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+input{
+    font-size: 20px;
+}
+
+::-webkit-datetime-edit { font-size: 3rem }
+::-webkit-datetime-edit-fields-wrapper { background: silver; }
+::-webkit-datetime-edit-text { color: red; padding: 0 0.3em; }
+::-webkit-datetime-edit-month-field { color: blue; }
+::-webkit-datetime-edit-day-field { color: green; }
+::-webkit-datetime-edit-year-field { color: purple; }
+::-webkit-inner-spin-button {  }
+::-webkit-calendar-picker-indicator { 
+    background-color: #dfdfdf;
+    height: 80px;
+    width: 80px;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
+
+/*******************************************************/
+/*/                                                   /*/
+/*/                      navbar                       /*/
+/*/                                                   /*/
+/*******************************************************/
+
+#navbar {
+    font-size: 16px;
+
+}
+
+.navbar-static-top{
+    
+}
+
+#navbar ul{
+    list-style: none;
+    
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: lightgrey;
+}
+
+#navbar li{
+    float: right;
+    width: auto;
+    height: inherit;
+    border-style: none;
+    background-color: lightgrey;
+}
+#navbar li a{
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+#navbar li a:hover{
+    background-color: grey;
+}
+
+.navbar-brand{
+    font-family: 'Fredricka the Great', cursive;
+    color: #dab844;
+    text-align: center;
+}
+
+li.active > a{
+    background-color: #dab844 !important;
+}
+
+.navbar-brand:hover{
+    color: #dab844;
+}
+
+.navbar-collapse{
+    padding-right: 0px;
+}
+.container-fluid{
+    margin: 0px;
+    padding: 0px !important;
+}
+
+.icon-bar{
+    background-color: grey;
+}
+
+.navbar-toggle {
+    border: 1px;
+    border-style: solid;
+    border-color: grey !important;
+    color: white;
+    background-color: lightgrey;
+}
+
+#navCollapse li{
+    display: block;
+}
+
+/*******************************************************/
+
+#loadout{
+    float: none;
+    background-color: lightgrey;
+    font-size: 24;
+    font-family: sans-serif;
+    border-radius: 8px;
+    width: 50%;
+    margin-top: 10px
+    
+}
+
+.container-fluid .jumbotron{
+    background: none;
+    text-align: center;
+}
+
+.row {
+    margin: 0px;
+    align-content: center;
+    width: 100%;
+}
+.row-centered{
+    margin-top: 15px;
+}
+
+#stuList-even{
+    margin: 0px;
+    background-color: #ececec;
+}
+
+#stuList-odd{
+    margin: 0px;
+}
+
+#loader{
+    display: block;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+}
+/*
+.dropdown-menu{
+    padding-right: 7px !important;
+}
+*/
+#drop li{
+    width: 100%;
+}
+#drop li:hover{
+    background-color: grey;
+}
+
+#scoreChart{
+    margin-left: -15px;
+}
+
+#info{
+    text-align: center;
+}
